                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 03-07-2006 changed: use alternate time calculation for dvdplayer if ffmpeg gives us negative duration
 - 03-07-2006 changed: builtin skin.theme now uses delayed skin loading bumping the usability somewhat.
 - 03-07-2006 changed: ignore "the" when sorting now applies to programs.
 - 03-07-2006 fixed: Fixed WMC not being detected right away
 - 03-07-2006 fixed: Removed need for SsdpProxy when only interested in WMC on the host
 - 03-07-2006 fixed: Removed browsing to upnp:// in NetworkSetup, now behaves like Daap
 - 03-07-2006 fixed: Changed default Network name from UPnP Server to Windows Media Connect (UPnP)
 - 03-07-2006 fixed: Removed duplicate code in AutoRun/PlayDisc function.
 - 03-07-2006 fixed: [ 1515857 ] Default bookmark and back problem.
 - 02-07-2006 fixed: PyMappingMethods were not included for Pythons playlist.  __getitem__, __len__ & __setitem__
                     It is subscriptable, Use PlayList[int] to retrieve a playlistItem.
 - 02-07-2006 fixed: navigation could get stuck in media windows if a server disappeared. also, this incidentially adds upnp support! thx a bunch to c0diq, see http://www.plutinosoft.com/blog/category/blahblah/120 
 - 02-07-2006 added: shadowColor to the ControlButton in Python.
                     - If you want a label with a shadow, use the button without textures :)
 - 02-07-2006 fixed: subtitles where centered according to overscan corrections
 - 02-07-2006 fixed: filenames with an @ signed in them in the root of dvd/cd's would refuse to play
 - 01-07-2006 added: two new python functions:
                     xbmc.playSFX(filename) -- Plays a wav file by filename